--- a/The_Slayer/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+++ b/The_Slayer/ProjectSettings/Packages/com.unity.probuilder/Settings.json
@@ -126,12 +126,12 @@
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastPivotPosition",
-                "value": "{\"m_Value\":{\"x\":0.0,\"y\":-7.629394360719744e-8,\"z\":0.0}}"
+                "value": "{\"m_Value\":{\"x\":0.0,\"y\":0.0,\"z\":0.0}}"
             },
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastSize",
-                "value": "{\"m_Value\":{\"x\":-2.0178356170654299,\"y\":2.893819808959961,\"z\":0.1510763168334961}}"
+                "value": "{\"m_Value\":{\"x\":-23.654987335205079,\"y\":0.6097590327262878,\"z\":4.778297424316406}}"
             },
             {
                 "type": "UnityEngine.Quaternion, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
