Added Door script
Doors open and close, including the double doors
I also fixed the lights in the tunnel from going wacky

--- a/The_Slayer/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+++ b/The_Slayer/ProjectSettings/Packages/com.unity.probuilder/Settings.json
@@ -89,6 +89,11 @@
                 "value": "{\"m_Value\":false}"
             },
             {
+                "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "editor.stripProBuilderScriptsOnBuild",
+                "value": "{\"m_Value\":true}"
+            },
+            {
                 "type": "UnityEngine.ProBuilder.RectSelectMode, Unity.ProBuilder, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "editor.dragSelectRectMode",
                 "value": "{\"m_Value\":0}"
@@ -131,7 +136,7 @@
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastSize",
-                "value": "{\"m_Value\":{\"x\":3.18438720703125,\"y\":0.027183281257748605,\"z\":12.11131477355957}}"
+                "value": "{\"m_Value\":{\"x\":-3.078357696533203,\"y\":5.586050033569336,\"z\":0.42288970947265627}}"
             },
             {
                 "type": "UnityEngine.Quaternion, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
